# RCAIDE

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  release_action.yaml
.github\workflows/: rcaide-package.yml
Legacy/trunk/S/Components/Energy/Storages/Batteries/Constant_Mass/: Lithium_Ion.py  Lithium_Ion_LiNiMnCoO2_18650.py
Legacy/trunk/S/Methods/Propulsion/: propeller_design.py
RCAIDE/Framework/Analyses/Aerodynamics/: Vortex_Lattice_Method.py
RCAIDE/Framework/Analyses/Noise/: Correlation_Buildup.py  Frequency_Domain_Buildup.py
RCAIDE/Framework/Mission/: Sequential_Segments.py
RCAIDE/Framework/Mission/Segments/: Segment.py
RCAIDE/Framework/Networks/: Electric.py  Turboprop_Engine_Network.py  __init__.py
Regressions/Tests/analysis_noise/: digital_elevation_test.py  frequency_domain_test.py  noise_surrogate_test.py
Regressions/Tests/mission_segments/: segment_test.py
Regressions/Tests/network_all_electric/: all_electric_rotor_test.py
Regressions/Tests/network_electric/: electric_btms_test.py
Regressions/Tests/network_internal_combustion_engine/: ICE_constant_speed_test.py  ICE_test.py
Regressions/Tests/network_turbojet/: turbojet_network_test.py
