[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rcaide_sai"  # If you want to keep 'RCAIDE' as the module name for imports
version = "24.0.4"
authors = [
  {name = "LEADS Research Group"},
]
maintainers = [
  {name = "LEADS Research Group"},
]
description = "RCAIDE Scientific/Engineering tools"
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9, <3.13"
dependencies = [
  "contourpy==1.2.0",
  "cycler==0.12.1",
  "fonttools==4.47.2",
  "geographiclib==2.0",
  "geopy==2.4.1",
  "importlib_metadata==8.5.0",
  "joblib==1.3.2",
  "kaleido==0.2.1",
  "kiwisolver==1.4.5",
  "matplotlib==3.8.2",
  "numpy==1.26.4",
  "packaging==23.2",
  "pandas==2.2.0",
  "pillow==10.2.0",
  "plotly==5.18.0",
  "pyparsing==3.1.1",
  "python-dateutil==2.8.2",
  "pytz==2024.1",
  "scikit-learn==1.4.0",
  "scipy==1.13.0",
  "six==1.16.0",
  "tenacity==8.2.3",
  "threadpoolctl==3.2.0",
  "tzdata==2023.4",
  "zipp==3.20.2",
  "build==1.2.2"
]

[tool.setuptools.packages.find]
include = ["RCAIDE", "RCAIDE.*"]  # Use the top-level package name as 'RCAIDE'

[tool.pytest.ini_options]
addopts = "--showlocals -v -n auto"

[tool.ruff]
extend-exclude = ["__init__.py"]
fix = true

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins: Check for Python builtins being used as variables or parameters
    "B",    # flake8-bugbear: Find likely bugs and design problems
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes: Detect various errors by parsing the source file
    "I",    # isort: Check and enforce import ordering
    "ISC",  # flake8-implicit-str-concat: Check for implicit string concatenation
    "TID",  # flake8-tidy-imports: Validate import hygiene
    "UP",   # pyupgrade: Automatically upgrade syntax for newer versions of Python
    "SLF001",  # flake8-string-format: Check for private object name access
]

ignore = ["E501","E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SLF001"]
"**.ipynb" = ["E402", "E703"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
